[project]
name = "vibecast"
version = "0.0.1"
description = "Vibecast"
readme = "README.md"
license = "GPL-3.0"
authors = [
    { name = "AI dan", email = "aidan3e4@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "llm-inference @ git+https://github.com/aidan3e4/llm-inference.git@main",
    "opencv-python-headless>=4.13.0.90",
    "pillow>=12.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "aws-sam-cli>=1.148.0",
    "boto3>=1.42.35",
    "ipykernel>=7.1.0",
    "pytest>=8.0.0",
    "flake8>=7.3.0",
    "ruff>=0.14.13",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["vibecast*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
